# systemc_practice

docs_and_scripts/: github_checker_before_push_scpractice.bash  set_exports.bash  verilator_systemc_install.txt
lecture_nov_24/1_install_verilator_systemc/: set_exports.bash  verilator_systemc_install.txt
lecture_nov_24/2_verilator_systemc_rtl_only/: Makefile  custom_logic.v  readme.txt  sc_main.cpp  top.v
lecture_nov_24/3_verilator_systemc_rtl_tlm/: bfm.h  bfm_axim.cpp  bfm_axis.cpp  sc_main.cpp  skid_buffer.v  tlm.cpp  tlm.h
mike/tlm1test_tlmfifo/: .gitignore  Makefile  my3.cpp
sysc_examples/mytest_channel_mutex/: sc_main.cpp
sysc_examples/mytest_export/: Makefile  sc_main.cpp
sysc_examples/mytest_export_fifo/: Makefile  sc_main.cpp
sysc_examples/mytest_export_fifo_hfiles/: Makefile  module1.cpp  module1.h  module2.cpp  module2.h  sc_main.cpp
sysc_examples/mytest_export_fifo_struct_hfile/: Makefile  sc_main.cpp
sysc_examples/mytest_export_fifo_struct_hfiles/: Makefile  module1.cpp  module1.h  module2.cpp  module2.h  mytype.h  sc_main.cpp
sysc_examples/mytest_export_fifo_trace_1/: Makefile  sc_main.cpp  trace.vcd
sysc_examples/mytest_fifo/: Makefile  sc_main.cpp
sysc_examples/mytest_first_tlm2/: Makefile  sc_main.cpp
sysc_examples/mytest_hierarchical_channel/: Makefile  sc_main.cpp
sysc_examples/mytest_my_first_rob/: Makefile  arbiter.cpp  arbiter.h  generator.cpp  generator.h  monitor.cpp  monitor.h  sc_main.cpp
sysc_examples/mytest_my_first_rob1/: Makefile  arbiter.cpp  arbiter.h  generator.cpp  monitor.cpp  monitor.h  sc_main.cpp
sysc_examples/mytest_tb_rtl_checker/: bfm.cpp  bfm.h  checker.cpp  checker.h  sc_main.cpp  tb.cpp  tb.h  tlm.cpp  tlm.h
sysc_examples/mytest_tb_rtl_checker_temp/: Makefile  bfm.cpp  bfm.h  checker.cpp  checker.h  sc_main.cpp  tb.cpp  tlm.cpp
sysc_examples/mytest_tb_rtl_checker_temp1/: bfm.cpp  checker.cpp  sc_main.cpp  tlm.h
sysc_examples/mytest_tb_rtl_checker_temp_method/: Makefile  bfm.h  bfm_axim.cpp  bfm_axis.cpp  sc_main.cpp  tb.h  tlm.h
sysc_examples/mytest_tb_rtl_checker_temp_thread/: Makefile  bfm_axim.cpp
sysc_examples/mytest_tb_rtl_temp1/: Makefile  initiator.h  sc_main.cpp  target.h  tlmwrap.h
sysc_examples/mytest_tb_rtl_temp2/: Makefile  bfm_axim.cpp  bfm_axis.cpp  checker.cpp  target.h  tb.cpp  tlmwrap.h
sysc_examples/scv_trans_recording_no_veril_cmake/: CMakeLists.txt  sc_main.cpp
sysc_examples/systemverilog_bfm_gen_check_ver1/: design.sv  testbench.sv
sysc_examples/tlm_test_expriments/: Makefile  check.sv  checker_logic.sv  generator.sv  generator_logic.sv  reg_slice.sv  sc_main.cpp  skid_buffer.sv  top.sv
sysc_examples/veril_bfm_gen_check_ver1/: bfm.h  bfm_axim.cpp  bfm_axis.cpp  generator.v  generator_logic.v  sc_main.cpp  tlm.cpp  top.v
sysc_examples/veril_mytest_bfm_1/: Makefile  Makefile_obj  bfm.h  bfm_axim.cpp  bfm_axis.cpp  checker.cpp  checker.h  sc_main.cpp  tb.cpp  tb.h  tlm.cpp  tlm.h  top.v
sysc_examples/veril_mytest_bfm_gen_trckr/: check.v  check_logic.v  generator.v  generator_logic.v  reg_slice.v  sc_main.cpp  top.v
sysc_examples/veril_register_sc_301_callback_1/: Makefile  config.vlt  sc_main.cpp  skid_buffer.v
sysc_examples/veril_systemc_rtl_tlm_tlm2/: check_logic.v  tlm.h
sysc_examples/veril_systemc_rtl_tlm_tlm2_hierar_ref_test/: Makefile  bfm.h  bfm_axim.cpp  top.v  (+6 more)
tlm2/: set_exports.bash
tlm2/spike_verilator_tlm2/: CMakeLists.txt  README.md  pins2queue.cpp  pins2queue.h  queue2pins.cpp  queue2pins.h  reset.cpp  sc_main.cpp  simcontrol.cpp  simcontrol.h  spike.cpp  spike.h  top.v  uncore.cpp  uncore.h
tlm2/spike_verilator_tlm2/media/: Spike_TLM20.drawio
tlm2/tlm_to_rtl_bridge_scv_verif/: CMakeLists.txt  README.md  busstructs.h  io_block.v  memmodel.cpp  memmodel.h  queue2pins.h  reg_slice.v  reset.h  sc_main.cpp  skid_buffer.v  tbchk_thread.cpp  tbgen_thread.cpp  testbench.h
tlm2/tlm_to_rtl_bridge_scv_verif/media/: RTL_ram_block.drawio  Scv_Verif_TLM20.drawio
(+7 files in other folders)
